--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     </form>
     
     <!-- Table for the Result -->
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover mb-5">
         <tbody>
             <tr>
                 <td>IP Address</td>
