--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
  
  
-{% block title %} IP Finder {% endblock %}
+{% block title %} IP Address Information Finder {% endblock %}
  
  
  
@@ -20,8 +20,6 @@
         </div>
  
         <input type="submit" class="btn btn-primary mb-4" value="Search">
- 
- 
  
     </form>
     
