--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <td>Region</td>
-                <td>{{data.region}}</td>
+                <td>{{data.region_code}} | {{data.region}}</td>
             </tr>
             <tr>
                 <td>Country</td>
